--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
-    provided 'de.robv.android.xposed:api:53'
+    compile 'de.robv.android.xposed:api:53'
     compile 'com.android.support:cardview-v7:23.+'
-    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:crashreport:2.8.6.0'
     compile('com.jrummyapps:android-shell:1.0.1@aar') {
         transitive = true;
         exclude group: 'com.android.support', module: 'support-annotations'
